# AI_LEARNING

./: .gitignore  README.md  advanced_pandas_operations.py  california_housing_analysis.py  california_housing_cleaning.py  linear_regression.py  main.py  nonlinear_regression.py  pandas_operations.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
projects/day7_model_selection/: README.md  requirements.txt
projects/day7_model_selection/src/: download_data.py  main.py  model_selector.py
reports/: model_report_20250408_144108.txt  model_report_20250408_144735.txt  model_report_20250408_145744.txt  model_report_20250408_152420.txt
scripts/: download_data.py
src/: main.py  pipeline.py
src/data/: advanced_operations.py  basic_operations.py  data_cleaner.py  data_loader.py  data_preprocessor.py  make_dataset.py
src/features/: feature_engineering.py
src/models/: classification_trainer.py  linear_model.py  model_trainer.py  nonlinear_model.py  train_model.py
src/reporting/: report_generator.py
src/utils/: data_cleaner.py  data_loader.py  data_preprocessor.py
src/visualization/: report_generator.py  visualize.py
tests/: conftest.py  test_model.py  test_pipeline.py
tests/unit/models/: test_model_trainer.py
tests/unit/utils/: test_data_loader.py  test_data_preprocessor.py
