[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "california_housing"
version = "0.1.0"
description = "Projet d'analyse du California Housing Dataset"
authors = [
    {name = "Solal Ohana", email = "solal.ohana@gmail.com"}
]
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "xgboost",
    "joblib",
    "matplotlib",
    "seaborn"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing" 